# Oddprog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  defs.h  device.c  main.c  prog.c  protocol.c
tests/: CMakeLists.txt  test_oddprog.cpp  test_prog.cpp  test_slipprotocol.cpp  testdefs.h
tools/: oddprog_emulator.py  test_avrdude_e2e.py
